[tool.poetry]
name = "wacz-signing-api"
version = "0.1.2"
description = "Flask application for WACZ signing"
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
readme = "README.md"
packages = [{include = "wacz_signing_api"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
wacz-signing = "^0.3.4"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
